# fortscript

./: .gitignore  LICENSE  README.md  README_ptBR.md  cli.py  example.py  main.py  pyproject.toml
.github/workflows/: release.yml
cli/: cli.py  config.yaml
fortscript/: main.py  teste.py
fortscript/cli/: cli.py
src/fortscript/: __init__.py  games.py  main.py
src/fortscript/cli/: cli.py  config.yaml
src/fortscript/cookbook/project_with_arguments/: backend_simulator.py  main.py
src/fortscript/cookbook/project_with_games_list/: backend_simulator.py  main.py
src/fortscript/cookbook/project_with_yaml_file/: config.yaml  main.py  overlay_controller.py
tests/: test_basic.py
