[project]
name = "fortscript"
version = "0.2.0"
description = "Ferramenta para automação e controle de processos, otimizada para economizar memória e processamento do sistema."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[project.scripts]
fort = "fortscript.cli.cli:main"

[tool.setuptools]
packages = ["fortscript"]
include-package-data = true

[tool.setuptools.package-data]
"fortscript.cli" = ["*.yaml"]
