[project]
name = "fortscript"
version = "0.2.4"
authors = [
  { name="Wesley Queiroz" },
]
description = "Pause your scripts automatically when gaming or running heavy apps."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
fort = "fortscript.cli.cli:main"

[project.urls]
Repository = "https://github.com/WesleyQDev/fortscript"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "taskipy>=1.2.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ['I','F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = "ruff check ."
pre_format = 'ruff check --fix'
format = "ruff format ."
run = 'python -m fortscript.cli.cli'
pre_test = "task lint"
test = "pytest -s -x --cov=fortscript -vv"
post_test = 'coverage html'
